[VAS-912] updated unit tests